# dart_generator

./: .gitignore  Cargo.toml  README.md  expanded.rs
docs/: TODOs.txt
grammars/: dart.fan  dart2.fan  dart2_py.fan
grammars/old_versions/: dart2_v0.02.fan  temp.fan
grammars/old_versions/fanpy-dart-grammar/: dart2_py.fan
grammars/old_versions/raw/: dart2_lexer_init.fan  dart2_parser_init.fan
grammars/versions/: dart2_v0.01.fan  scriptsizec.fan
litreview/: panic_rules.txt
report/: report.tex
src/: lib.rs
