[package]
name = "lang_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
fandango = { git = "https://git@github.com/fandango-fuzzer/fandango-rs.git", version = "0.1.0" }
fandango-core = { git = "https://git@github.com/fandango-fuzzer/fandango-rs.git", version = "0.1.0" }
fandango-runtime = { git = "https://git@github.com/fandango-fuzzer/fandango-rs.git", version = "0.1.0" }
pest = "2.8.6"
rand = "0.9.2"
num-rational = "0.4.2"
